[package]
name = "neat_experiments"
version = "0.1.0"
authors = ["Isaac Chen"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.70.1"
piston2d-opengl_graphics = "0.81.0"